--- a/ceng311_project/style/index.css
+++ b/ceng311_project/style/index.css
@@ -72,3 +72,11 @@ body {
 .cta-button:hover {
     background-color: #0056b3; 
 }
+
+
+/* Main content styling using ID */
+#main-content {
+    padding-top: 3px; 
+}
+
+
