--- a/ceng311_project/style/index.css
+++ b/ceng311_project/style/index.css
@@ -4,6 +4,8 @@ body {
     margin: 0; 
     padding: 0; 
     background-color: #f9f9f9; 
+    background-image: linear-gradient(rgba(255, 255, 255, 0.50)), url('../image/background.avif');
+    background-size: cover; 
 }
 
 /* Hero title */
