--- a/ceng311_project/style/gallery.css
+++ b/ceng311_project/style/gallery.css
@@ -9,7 +9,7 @@ body {
   .hero h1 {
     font-size: 32px;
     font-weight: bold;
-    color: #222;
+    color: #0c3b84;
     margin-top: 20px;
   }
   
@@ -23,6 +23,7 @@ body {
   .gallery-section h2 {
     font-size: 22px;
     margin-bottom: 10px;
+    color: #0c3b84;
   }
   
   .carousel {
