--- a/ceng311_project/style/index.css
+++ b/ceng311_project/style/index.css
@@ -12,7 +12,7 @@ body {
 .hero h1 {
     font-size: 32px; 
     font-weight: bold; 
-    color: #222; 
+    color: #0c3b84;
 }
 
 /* Hero section description text */
@@ -44,7 +44,7 @@ body {
 .info-box h2 {
     font-size: 20px; 
     font-weight: bold; 
-    color: #222; 
+    color: #0c3b84;
 }
 
 /* Styling for info box text */
