--- a/ceng311_project/style/howto.css
+++ b/ceng311_project/style/howto.css
@@ -126,13 +126,13 @@ body {
     margin-bottom: 20px;
   }
   
-  #weather-box {
-    font-size: 1.1em;
-    font-weight: 500;
-    color: #333;
-    margin: 20px auto;
-    padding: 15px;
-    background: #d4f0ff;
-    border-left: 5px solid #3399cc;
-    max-width: 700px;
-  }
+#book-box {
+  font-size: 1.1em;
+  font-weight: 500;
+  color: #333;
+  margin: 20px auto;
+  padding: 15px;
+  background: #fef3d4;
+  border-left: 5px solid #ffcc00;
+  max-width: 500px;
+}
